fix(web): remove sidebar scrollbar unexpected right padding

--- a/actor-sdk/sdk-web/src/styles/components/common/_scroller.scss
+++ b/actor-sdk/sdk-web/src/styles/components/common/_scroller.scss
@@ -37,7 +37,7 @@ $scroller-thumb-radius: 6px;
   .scroller__container {
     overflow: auto;
     margin-right: -32px;
-    padding-right: 32px;
+    padding-right: 28px;
   }
 }
 
